components/policies/development/konflux-rbac/restrict-binding-system-authenticated-releng/.chainsaw-test/resources/invalid-systemauthenticated-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-systemauthenticated-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: not-allowed-clusterrole
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:authenticated
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: my-user
- apiGroup: ""
  kind: ServiceAccount
  name: my-serviceaccount
