components/policies/development/konflux-rbac/restrict-binding-system-authenticated-releng/.chainsaw-test/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: in-rhtap-releng-tenant-invalid-rolebinding
spec:
  description: |
    tests that the a invalid RoleBinding can NOT be created
    in a tenant namespace
  concurrent: false
  namespace: 'rhtap-releng-tenant'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../validate-restrict-binding-system-authenticated-releng-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: given-tenant-namespace-exists
    try:
    - apply:
        file: ./resources/tenant-namespace.yaml
  - name: then-invalid-rolebindings-can-not-be-created
    try:
    - apply:
        file: ./resources/invalid-systemauthenticated-rolebinding.yaml
        expect:
        - check:
            ($error != null): true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: in-rhtap-releng-tenant-delete-existing-invalid-rolebinding
spec:
  description: |
    tests that the an existing invalid RoleBinding can be deleted
    in a tenant namespace
  concurrent: false
  namespace: 'rhtap-releng-tenant'
  steps:
  - name: given-tenant-namespace-exists
    try:
    - apply:
        file: ./resources/tenant-namespace.yaml
  - name: given-invalid-rolebindings-exists
    try:
    - create:
        file: ./resources/invalid-systemauthenticated-rolebinding.yaml
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: when-cluster-policy-is-ready
    try:
    - apply:
        file: ../validate-restrict-binding-system-authenticated-releng-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-invalid-rolebindings-can-be-deleted
    try:
    - delete:
        file: ./resources/invalid-systemauthenticated-rolebinding.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: in-rhtap-releng-tenant-valid-rolebinding
spec:
  description: |
    tests that the a valid RoleBinding can be created in a
    tenant namespace
  concurrent: false
  namespace: 'rhtap-releng-tenant'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../validate-restrict-binding-system-authenticated-releng-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: given-tenant-namespace-exists
    try:
    - apply:
        file: ./resources/tenant-namespace.yaml
  - name: then-valid-rolebindings-can-be-created
    try:
    - apply:
        file: ./resources/valid-systemauthenticated-rolebinding.yaml
        expect:
        - check:
            ($error != null): false
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: out-of-rhtap-releng-tenant-rolebinding
spec:
  description: |
    tests that the whatever RoleBinding can be created in a
    non-tenant namespace
  concurrent: false
  namespace: 'non-rhtap-releng-tenant'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../validate-restrict-binding-system-authenticated-releng-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: then-rolebindings-can-be-created-in-a-nontenant-namespace
    try:
    - apply:
        file: ./resources/valid-systemauthenticated-rolebinding.yaml
        expect:
        - check:
            ($error != null): false
    - apply:
        file: ./resources/invalid-systemauthenticated-rolebinding.yaml
        expect:
        - check:
            ($error != null): false
